--- a/Pages/About_Me.html
+++ b/Pages/About_Me.html
@@ -49,7 +49,7 @@
 
   <div class="section-center" style="position:static; padding-top: 30vh;">
     
-    <img src="../img/WhatsApp Image 2022-03-15 at 15.38.42.jpeg" alt="">
+    <img style="margin-left: 35%;" src="../img/WhatsApp Image 2022-03-15 at 15.38.42.jpeg" alt="">
       <h1 class="mb-0" style="font-size: 9vh;">Hi, I'm Mohamad! </h1>
       <h3 style="font-size: 5vh; margin: 1vh;">I am 22 years old, software developer and live in Den Bosch. Also I am a student at SintLucas in Eindhoven.<br> I am a managerassistant in a supermarket. I live in the Netherlands since 2016.</h3>
      
