--- a/Pages/my_first_website_nl.html
+++ b/Pages/my_first_website_nl.html
@@ -7,15 +7,15 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/my_java_script.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
 </head>
 
-<body class="body" style="width: auto;">
+<body class="body" style="width: auto;" onload="loaded();">
   <div class="Header">
-    <button class="button"><a  href="My_Work_Nl.html"><span> Terug</span></a></button>
   </div>
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
@@ -44,11 +44,38 @@
   <div style="margin-top: 25vh;">
     <h1 class="mb-0" style="font-size: 9vh;">Mijn eerste website:</h1>
     <br>
-    <h2 style="font-size: 5vh;"> In dit project heb ik een website ontwikkeld in HTML. Hier is waar ik begonnen was om HTML leuk te vinden. Ik heb toen een simple website gemaakt die informatie over mij bevat.</h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
+
+<div style="grid-template-columns: 100%;"class="grid-container">
+  <div  class="grid-item0"><button class="button"><a  href="My_Work_Nl.html"><span> Terug naar Mijn Werk</span></a></button></div>
+</div>
+
+<div id="info" class="grid-container">
+  <div class="grid-item1">Algemeen:</div>
+  <div class="grid-item2">In dit project heb ik een website ontwikkeld in HTML. Het was de eerste keer dat ik met HTML en CSS moest werken. Ik heb toen een simple website gemaakt die informatie over mij bevat.</div>
+  <div class="grid-item1">Gebruikte taal/en:</div>
+  <div class="grid-item2">HTML & CSS</div>
+  <div class="grid-item1">Gebruikte programma/'s:</div>
+  <div class="grid-item2">Visual Studio Code</div>
+</div>
+
+<div style="grid-template-columns: 100%;"class="grid-container">
+  <div class="grid-item2" >
+    <button style="color: white;" type="button" id="info_button" onclick="See_Info();" class="btn">Bekijk Informatie</button>
+    <button style="color: white;" type="button" onclick="Website()" class="btn">Bekijk de website</button>
+    <a href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank"><button style="color: white;"type="button" class="btn">Bekijk Code</button></a> 
+  </div>
+</div>
+
+
+
+
+<div id="website"class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="../Projects/first website/index.html" allowfullscreen></iframe>
   </div>
+
+
+
 </body>
 </html>
