--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <script src="/js/js.Index.js"></script> 
+    <script src="js/my_java_script.js"></script> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- CSS only -->
@@ -257,9 +257,9 @@
   </nav>
 
   <div class="section-center">
-      <h1 class="mb-0" style="padding-bottom: 10vh;">Welcome to my website!</h1>
+      <h1 class="mb-0" style="padding-bottom: 10vh; padding-top: 40vh;">Welcome to my website!</h1>
 
-      <button ><a href="Pages/About_Me.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">About Me</h2></a></button>
+      <button class="button"><a href="Pages/About_Me.html" style="text-decoration: none;"><h2 style="font-size: 2vh;">About Me</h2></a></button>
   </div>
  
   
