--- a/Pages/About_Me_NL.html
+++ b/Pages/About_Me_NL.html
@@ -48,7 +48,7 @@
 
   <div class="section-center" style="position:static; padding-top: 30vh;">
     
-    <img src="../img/WhatsApp Image 2022-03-15 at 15.38.42.jpeg" alt="">
+    <img style="margin-left: 35%;" src="../img/WhatsApp Image 2022-03-15 at 15.38.42.jpeg" alt="">
       <h1 class="mb-0" style="font-size: 9vh;">Hey, ik ben Mohamad! </h1>
       <h3 style="font-size: 5vh; margin: 1vh;">Ik ben 22 jaar oud, software ontwikkelaar en woon in Den Bosch. Ik ben (nog) student op SintLucas in Eindhoven.<br> Ik werk als een managerassistant in een supermarket. Ik woon sinds 2016 in Nederland.</h3>
       
