--- a/Pages/indexNL.html
+++ b/Pages/indexNL.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../css/style.css">
-    <script src="/js/js.Index.js"></script> 
+    <script src="../js/my_java_script.js"></script> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- CSS only -->
@@ -34,6 +34,7 @@
         </style>
 </head>
 <body class="body"  style="overflow: hidden;">
+
 <SCRIPT LANGUAGE="JavaScript">
     //Hide from older browsers 
     if (document.getElementById&&!document.layers){
@@ -256,10 +257,10 @@
   </nav>
 
  <div class="section-center">
-      <h1 class="mb-0" style="padding-bottom: 10vh;">Welkom op mijn website!</h1>
+      <h1 class="mb-0" style="padding-bottom: 10vh; padding-top: 40vh;">Welkom op mijn website!</h1>
       <br>
 
-      <button><a href="About_Me_NL.html" style="text-decoration: none;"><h2 style="font-size: 4vh;">Over mij</h2></a></button>
+      <button class="button"><a href="About_Me_NL.html" style="text-decoration: none;"><h2 style="font-size: 2vh;">Over mij</h2></a></button>
   </div>
  
   
