--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/my_java_script.js"></script> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,11 +15,13 @@
 </head>
 
 
-<body class="body" style="width: auto;">
-
+<body class="body" onload="loaded();">
   <div class="Header">
-    <button class="button"><a  href="My_Work.html"><span> Return</span></a></button>
+
   </div>
+  
+
+
 <a href="../index.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
@@ -43,14 +46,43 @@
     </div>
   </div>
 
+
   <div style="margin-top: 25vh;">
     <h1 class="mb-0" style="font-size: 9vh;">My First Website:</h1>
     <br>
-    <h2 style="font-size: 5vh;">In this project I developed a website in HTML. This is where i started to love HTML.  I made a website that contains a little information about me. </h2>
 </div>
 
-<div class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
+
+<div style="grid-template-columns: 100%;"class="grid-container">
+  <div  class="grid-item0"><button class="button"><a  href="My_Work.html"><span> Back to My Work</span></a></button></div>
+</div>
+
+<div id="info" class="grid-container">
+  <div class="grid-item1">A little discription:</div>
+  <div class="grid-item2">In this project I developed a website in HTML. This is where i started to love HTML. I made a website that contains a little information about me.</div>
+  <div class="grid-item1">Used language/s:</div>
+  <div class="grid-item2">HTML & CSS</div>
+  <div class="grid-item1">Used tool/s:</div>
+  <div class="grid-item2">Visual Studio Code</div>
+</div>
+
+<div style="grid-template-columns: 100%;"class="grid-container">
+  <div class="grid-item2" >
+    <button style="color: white;" type="button" id="info_button" onclick="See_Info();" class="btn">See Info</button>
+    <button style="color: white;" type="button" onclick="Website()" class="btn"> Try It</button>
+    <a href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank"><button style="color: white;"type="button" class="btn">See Code</button></a> 
+  </div>
+</div>
+
+
+
+
+<div id="website"class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
     <iframe class="embed-responsive-item" src="../Projects/first website/index.html" allowfullscreen></iframe>
   </div>
+
+
+
+
 </body>
 </html>
