--- a/Pages/arcade_project_nl.html
+++ b/Pages/arcade_project_nl.html
@@ -13,7 +13,7 @@
     <title>Arcade project</title>
 </head>
 
-<body class="body" style="width: auto;" onload="loaded();">
+<body class="body" style="width: 100%;" onload="loaded_Arcade();">
   <div class="Header">
   </div>
 <a href="indexNL.html" class="logo">
