--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -15,7 +15,7 @@
 </head>
 
 
-<body class="body" onload="loaded();">
+<body class="body" onload="loaded_Website();">
   <div class="Header">
 
   </div>
