--- a/Pages/my_first_website_nl.html
+++ b/Pages/my_first_website_nl.html
@@ -14,7 +14,7 @@
     <title>My Website</title>
 </head>
 
-<body class="body" style="width: auto;" onload="loaded();">
+<body class="body" style="width: auto;" onload="loaded_Website();">
   <div class="Header">
   </div>
 <a href="indexNL.html" class="logo">
