--- a/Pages/arcade_project_nl.html
+++ b/Pages/arcade_project_nl.html
@@ -59,16 +59,18 @@
   <div class="grid-item2">Visual Studio & Unity</div>
 </div>
 
+</div>
+<div id="arcade_video" class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
+  <iframe style="padding: 3%;" class="embed-responsive-item" src="https://www.youtube.com/embed/-HDfnFANFz0 "></iframe>
+</div>
+
 <div style="grid-template-columns: 100%;"class="grid-container">
   <div class="grid-item2" >
     <button style="color: white;" type="button" id="info_button" onclick="See_Info_Arcade();" class="btn">Bekijk Informatie</button>
     <button style="color: white;" type="button" onclick="Show_Arcade();" class="btn">Bekijk de game</button>
-    <a href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank"><button style="color: white;"type="button" class="btn">Bekijk Code</button></a> 
+    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank">Bekijk De Code</a></button>
   </div>
-</div>
-  <div id="arcade_video" class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-HDfnFANFz0 "></iframe>
-  </div>
+
 
 
 
