--- a/Pages/arcade_project.html
+++ b/Pages/arcade_project.html
@@ -49,7 +49,7 @@
 </div>
 
 <div style="grid-template-columns: 100%;"class="grid-container">
-  <div  class="grid-item0"><button class="button"><a  href="My_Work.html"><span> Back to My Work</span></a></button></div>
+  <div  class="grid-item0"><button class="button"><a  href="My_Work.html"><span> Terug naar Mijn Werk</span></a></button></div>
 </div>
 
 <div id="info" class="grid-container">
@@ -61,16 +61,18 @@
   <div class="grid-item2">Visual Studio & Unity</div>
 </div>
 
+<div id="arcade_video" class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
+  <iframe style="padding: 3%;" class="embed-responsive-item" src="https://www.youtube.com/embed/-HDfnFANFz0 "></iframe>
+</div>
+
 <div style="grid-template-columns: 100%;"class="grid-container">
   <div class="grid-item2" >
-    <button style="color: white;" type="button" id="info_button" onclick="See_Info_Arcade();" class="btn">Bekijk Informatie</button>
-    <button style="color: white;" type="button" onclick="Show_Arcade();" class="btn">Bekijk de game</button>
-    <a href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank"><button style="color: white;"type="button" class="btn">Bekijk Code</button></a> 
+    <button style="color: white;" type="button" id="info_button" onclick="See_Info_Arcade();" class="btn">See Information</button>
+    <button style="color: white;" type="button" onclick="Show_Arcade();" class="btn">See Game</button>
+    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank">See Code</a></button>
   </div>
 </div>
-  <div id="arcade_video" class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-HDfnFANFz0 "></iframe>
-  </div>
+
 
 
 
