--- a/Pages/data_visualisation_nl.html
+++ b/Pages/data_visualisation_nl.html
@@ -6,6 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/my_java_script.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +14,11 @@
 </head>
 
 
-<body class="body" style="width: auto;">
+<body class="body" style="width: auto;"onload="loaded_Data_visu();">
 
   <div class="Header">
-    <button class="button"><a  href="My_Work_Nl.html"><span> Terug</span></a></button>
   </div>
-<a href="indexNL.html" class="logo">
+<a href="indexNL.html" class="logo" >
     <img src="../img/Logo.png" alt="">
 </a>
 
@@ -49,9 +49,30 @@
     <h2 style="font-size: 5vh;">Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de woningmarkt in een specifieke provincie te laten zien.</h2>
 </div>
 
-  <div class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cwJGYTEtt00 "></iframe>
+<div style="grid-template-columns: 100%;"class="grid-container">
+  <div  class="grid-item0"><button class="button"><a  href="My_Work_Nl.html"><span> terug naar Mijn Werk</span></a></button></div>
+</div>
+
+<div id="info" class="grid-container">
+  <div class="grid-item1">Algemeen:</div>
+  <div class="grid-item2">Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de woningmarkt in een specifieke provincie te laten zien. </div>
+  <div class="grid-item1">gebruikte taal/en:</div>
+  <div class="grid-item2">C#</div>
+  <div class="grid-item1">Gebruikte programma/'s:</div>
+  <div class="grid-item2">Visual Studio & Unity</div>
+</div>
+
+<div id="visu_video" class="embed-responsive embed-responsive-16by9" style="height: 80vh;">
+  <iframe style="padding: 3%;" class="embed-responsive-item" src="https://www.youtube.com/embed/cwJGYTEtt00 "></iframe>
+</div>
+
+<div style="grid-template-columns: 100%;"class="grid-container">
+  <div class="grid-item2" >
+    <button style="color: white;" type="button" id="info_button" onclick="See_Info_Visu();" class="btn">Bekijk De Informatie</button>
+    <button style="color: white;" type="button" onclick="Show_visu();" class="btn">Bekijk Game</button>
+    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank">Bekijk De Code</a></button>
   </div>
+</div>
 
 
 
