--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -66,20 +66,22 @@
   <div class="grid-item2">Visual Studio Code</div>
 </div>
 
+<div id="website"class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
+  <iframe style="padding: 3%;" class="embed-responsive-item" src="../Projects/first website/index.html" allowfullscreen></iframe>
+</div>
+
 <div style="grid-template-columns: 100%;"class="grid-container">
   <div class="grid-item2" >
     <button style="color: white;" type="button" id="info_button" onclick="See_Info();" class="btn">See Info</button>
     <button style="color: white;" type="button" onclick="Website()" class="btn"> Try It</button>
-    <a href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank"><button style="color: white;"type="button" class="btn">See Code</button></a> 
+    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank">See Code</a></button>
   </div>
 </div>
 
 
 
 
-<div id="website"class="embed-responsive embed-responsive-21by9" style="height: 80vh;">
-    <iframe class="embed-responsive-item" src="../Projects/first website/index.html" allowfullscreen></iframe>
-  </div>
+
 
 
 
