--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -51,7 +51,7 @@
 					<a href="../index.html"><img src="../img/Logo.png" alt="IMG"></a>
 				</div>
 
-				<form class="contact100-form validate-form">
+				<form class="contact100-form validate-form" action="https://formspree.io/f/moqyqejd" method="POST">
 					<span class="contact100-form-title">
 						Get in touch
 					</span>
