--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -17,8 +17,9 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="../js/my_java_script.js"></script>
 </head>
-<body>
+<body onload="loaded_Contact();">
 
     <div class="dropdown" style="padding: 0;">
         <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
@@ -51,7 +52,7 @@
 					<a href="../index.html"><img src="../img/Logo.png" alt="IMG"></a>
 				</div>
 
-				<form class="contact100-form validate-form" action="https://formspree.io/f/moqyqejd" method="POST">
+				<form id="My_Form" class="contact100-form validate-form" action="https://formspree.io/f/moqyqejd" method="POST">
 					<span class="contact100-form-title">
 						Get in touch
 					</span>
@@ -65,7 +66,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
+						<input class="input100" type="email" name="email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
