--- a/Games/Pong Game/index.html
+++ b/Games/Pong Game/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Pong Game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Pong Game.data.br",
-        frameworkUrl: buildUrl + "/Pong Game.framework.js.br",
-        codeUrl: buildUrl + "/Pong Game.wasm.br",
+        dataUrl: buildUrl + "/Pong Game.data",
+        frameworkUrl: buildUrl + "/Pong Game.framework.js",
+        codeUrl: buildUrl + "/Pong Game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Awesome Inc U",
         productName: "PongGame",
