--- a/Pages/data_visualisation_en.html
+++ b/Pages/data_visualisation_en.html
@@ -70,7 +70,7 @@
   <div class="grid-item2" >
     <button style="color: white;" type="button" id="info_button" onclick="See_Info_Visu();" class="btn">See Information</button>
     <button style="color: white;" type="button" onclick="Show_visu();" class="btn">See game</button>
-    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://simmer.io/@MO22/datavisiualisation" target="_blank">Play</a></button>
+    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="../Games/Datavisiualisation/index.html" target="_blank">Play</a></button>
   </div>
 </div>
 
