--- a/Pages/data_visualisation_nl.html
+++ b/Pages/data_visualisation_nl.html
@@ -70,7 +70,7 @@
   <div class="grid-item2" >
     <button style="color: white;" type="button" id="info_button" onclick="See_Info_Visu();" class="btn">Bekijk De Informatie</button>
     <button style="color: white;" type="button" onclick="Show_visu();" class="btn">Bekijk Game</button>
-    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank">Bekijk De Code</a></button>
+    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="../Games/Datavisiualisation/index.html" target="_blank">Speel De Game</a></button>
   </div>
 </div>
 
