--- a/Pages/pong_game_nl.html
+++ b/Pages/pong_game_nl.html
@@ -69,7 +69,7 @@
   <div class="grid-item2" >
     <button style="color: white;" type="button" id="info_button" onclick="See_Info_Pong();" class="btn">Bekijk Informatie</button>
     <button style="color: white;" type="button" onclick="Show_Pong();" class="btn">Bekijk De Game</button>
-    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank">Bekijk Code</a></button>
+    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="../Games/Pong Game/index.html" target="_blank">Bekijk Code</a></button>
   </div>
 </div>
 
