--- a/Pages/2D_platformer.html
+++ b/Pages/2D_platformer.html
@@ -53,7 +53,7 @@
 </div>
 
 <div id="info" class="grid-container">
-  <div class="grid-item1">A little discription:</div>
+  <div class="grid-item1">General:</div>
   <div class="grid-item2">In this project I developed a 2D game in unity using c#. I learned too many things here like player get hit points, how player can win / lose, how player can move etc.</div>
   <div class="grid-item1">Used language/s:</div>
   <div class="grid-item2">C#</div>
