--- a/Pages/2D_platformer_nl.html
+++ b/Pages/2D_platformer_nl.html
@@ -56,7 +56,7 @@
 
 <div id="info" class="grid-container">
   <div class="grid-item1">Algemeen:</div>
-  <div class="grid-item2">In dit project heb ik een 2D-game in unity ontwikkeld met behulp van c#. Ik heb hier te veel dingen geleerd, zoals spelers die hitpoints krijgen, hoe een speler kan winnen / verliezen, hoe een speler kan bewegen...</div>
+  <div class="grid-item2">In dit project heb ik een 2D-game in unity ontwikkeld in van c#. Ik heb hier te veel dingen geleerd, zoals spelers die hitpoints krijgen, hoe een speler kan winnen / verliezen, hoe een speler kan bewegen...</div>
   <div class="grid-item1">Gebruikte taal/en:</div>
   <div class="grid-item2">C#</div>
   <div class="grid-item1">Gebruikte programma/'s:</div>
