--- a/Pages/arcade_project.html
+++ b/Pages/arcade_project.html
@@ -53,8 +53,8 @@
 </div>
 
 <div id="info" class="grid-container">
-  <div class="grid-item1">A little information:</div>
-  <div class="grid-item2">In this project i developed a competitive game in unity with DDM students from my school. It was a game that can be played on the arcade.</div>
+  <div class="grid-item1">General:</div>
+  <div class="grid-item2">In this project i developed a competitive game in unity with DDM. It is a game that can be played on the arcade.</div>
   <div class="grid-item1">Used language/s:</div>
   <div class="grid-item2">C#</div>
   <div class="grid-item1">Used programma/'s:</div>
