--- a/Pages/data_visualisation_en.html
+++ b/Pages/data_visualisation_en.html
@@ -54,8 +54,8 @@
 </div>
 
 <div id="info" class="grid-container">
-  <div class="grid-item1">A little information:</div>
-  <div class="grid-item2">I have developed an app that reads data from csv file to show the housing market in specific province </div>
+  <div class="grid-item1">General:</div>
+  <div class="grid-item2">I have developed an app that reads data from csv file to show the housing market in specific province.</div>
   <div class="grid-item1">Used language/s:</div>
   <div class="grid-item2">C#</div>
   <div class="grid-item1">Used programma/'s:</div>
