--- a/Pages/data_visualisation_nl.html
+++ b/Pages/data_visualisation_nl.html
@@ -55,7 +55,7 @@
 
 <div id="info" class="grid-container">
   <div class="grid-item1">Algemeen:</div>
-  <div class="grid-item2">Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de woningmarkt in een specifieke provincie te laten zien. </div>
+  <div class="grid-item2">Ik heb een app ontwikkeld die gegevens uit het csv-bestand leest om de cijfers van de woningmarkt in een specifieke provincie te laten zien. </div>
   <div class="grid-item1">gebruikte taal/en:</div>
   <div class="grid-item2">C#</div>
   <div class="grid-item1">Gebruikte programma/'s:</div>
