--- a/Pages/my_first_website.html
+++ b/Pages/my_first_website.html
@@ -58,7 +58,7 @@
 </div>
 
 <div id="info" class="grid-container">
-  <div class="grid-item1">A little discription:</div>
+  <div class="grid-item1">General:</div>
   <div class="grid-item2">In this project I developed a website in HTML. This is where i started to love HTML. I made a website that contains a little information about me.</div>
   <div class="grid-item1">Used language/s:</div>
   <div class="grid-item2">HTML & CSS</div>
