--- a/Pages/piano_madness.html
+++ b/Pages/piano_madness.html
@@ -54,9 +54,9 @@
 </div>
 
 <div id="info" class="grid-container">
-  <div class="grid-item1">A little discription:</div>
+  <div class="grid-item1">General:</div>
   <div class="grid-item2"> In this project I developed a mini piano application using c#.  
-    I learned more to work in unity.</div>
+    I have learned more about working in unity.</div>
     <div class="grid-item1">Used language/s:</div>
     <div class="grid-item2">C#</div>
     <div class="grid-item1">Used tool/s:</div>
@@ -71,7 +71,6 @@
   <div class="grid-item2" >
     <button style="color: white;" type="button" id="info_button" onclick="See_Info_Piano();" class="btn">See Info</button>
     <button style="color: white;" type="button" onclick="Show_Piano();" class="btn">See Game</button>
-    <button style="color: white;"type="button" class="btn"><a style="text-decoration: none; color: white; font-family: 'Montserrat', sans-serif;" href="https://github.com/MohamadAlSamour/mohamadAlSamour.github.io/tree/main/Projects/first%20website" target="_blank">See Code</a></button>
   </div>
 </div>
 
