--- a/Pages/todo_app.html
+++ b/Pages/todo_app.html
@@ -56,7 +56,7 @@
 </div>
 
 <div id="info" class="grid-container">
-  <div class="grid-item1">A little discription:</div>
+  <div class="grid-item1">General:</div>
   <div class="grid-item2">In this project I developed an application in HTML and MySQL. I have learned to create a basic to do list and stored it in the localdata service. </div>
   <div class="grid-item1">Used language/s:</div>
   <div class="grid-item2">HTML, CSS, and MySQL</div>
