--- a/Pages/arcade_project_nl.html
+++ b/Pages/arcade_project_nl.html
@@ -52,7 +52,7 @@
 
 <div id="info" class="grid-container">
   <div class="grid-item1">Algemeen:</div>
-  <div class="grid-item2">In dit project heb ik samen met DDM-studenten van mijn school een competitief spel ontwikkeld. Het was een spel dat op de arcade gespeeld kan worden.</div>
+  <div class="grid-item2">In dit project heb ik, samen met DDM-studenten van mijn school een competitief spel ontwikkeld. Het was een spel dat op de arcade gespeeld kan worden.</div>
   <div class="grid-item1">Gebruikte taal/en:</div>
   <div class="grid-item2">C#</div>
   <div class="grid-item1">Gebruikte programma/'s:</div>
