--- a/Pages/About_Me.html
+++ b/Pages/About_Me.html
@@ -57,7 +57,7 @@
         <div id="social-test">
           <br>
           <br>
-          <h2 style="font-size: 7vh;">Mijn Skills</h2>
+          <h2 style="font-size: 7vh;">My Skills</h2>
           <div class="skill">
             <div class="skills">TEAMWORK</div> 
             <div class="skill-bar">
