--- a/Pages/My_Work_Nl.html
+++ b/Pages/My_Work_Nl.html
@@ -19,6 +19,23 @@
 <a href="indexNL.html" class="logo">
     <img src="../img/Logo.png" alt="">
 </a>
+<script>
+ 
+  window.onload= ()=>{
+    console.log("test");
+  let input = document.cookie.split("=");
+  console.log(input);
+  let popUp = document.getElementById("cookiePopup"); // Define popUp here
+  if (input[0] === "myCookieName") {
+      popUp.classList.add("hide");
+      popUp.classList.remove("show");
+  } else {
+      popUp.classList.add("show");
+      popUp.classList.remove("hide");
+  }
+  };
+
+  </script>
 
 <div class="dropdown">
   <button type="button" class="btn btn-primary dropdown-toggle" style="background-color: red; position: fixed;" data-toggle="dropdown">
