--- a/Pages/indexNL.html
+++ b/Pages/indexNL.html
@@ -18,7 +18,7 @@
 <body class="body"  style="overflow: hidden;">
 
   <div id="cookiePopup" class="hide">
-    <img src="img/cookies.png">
+    <img src="../img/cookies.png">
     <p>
       Onze website maakt gebruik van cookies om uw surfervaring en relevante informatie te bieden. Voordat u onze website blijft gebruiken, gaat u ermee akkoord en accepteert u onze <a href="#">Cookie Policy & Privacy.</a> 
     </p>
