--- a/Pages/indexNL.html
+++ b/Pages/indexNL.html
@@ -20,7 +20,7 @@
   <div id="cookiePopup" class="hide">
     <img src="../img/cookies.png">
     <p>
-      Onze website maakt gebruik van cookies om uw surfervaring en relevante informatie te bieden. Voordat u onze website blijft gebruiken, gaat u ermee akkoord en accepteert u onze <a href="#">Cookie Policy & Privacy.</a> 
+      Onze website maakt gebruik van cookies om uw surfervaring en relevante informatie te bieden. Voordat u onze website blijft gebruiken, gaat u ermee akkoord en accepteert u onze <a href="https://www.cookiepolicygenerator.com/live.php?token=hSNsNLTfGuCiE4UIremtAJGJY0r1Jmf7">Cookie Policy & Privacy.</a> 
     </p>
     <button id="acceptCookie" onclick="acceptCookie()">Accept</button>
   </div>
