--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img src="img/cookies.png">
     <p>
     Our website uses cookies to provide your browsing experience and
-    relevant information. Before continuing to use our website, you agree & accept of our <a href="#">Cookie Policy & Privacy.</a> 
+    relevant information. Before continuing to use our website, you agree & accept of our <a href="https://www.cookiepolicygenerator.com/live.php?token=hSNsNLTfGuCiE4UIremtAJGJY0r1Jmf7">Cookie Policy & Privacy.</a> 
     </p>
     <button id="acceptCookie" onclick="acceptCookie()">Accept</button>
   </div>
